# nero

./: Cargo.toml  README.md
docs/: COMMANDS.md  CONTRIBUTING.md  README.md  customizing.md
examples/: README.md  cli.md
src/: command.rs  commands.rs  core.rs  data.rs  main.rs  nero.rs  utils.rs
