[package]
name = "nero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
troll = []
spy = []
all = ["troll", "spy"]

[dependencies]
rand = "0.8.4"
open = "5.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
